generator client {
  provider        = "prisma-client-js"
  output          = "../../backend/node_modules/.prisma/client"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  extensions = [postgis, uuid_ossp(map: "uuid-ossp", schema: "public")]
}

/// País envolvido nos fluxos migratórios (origem, destino ou trânsito).
model Country {
  id         String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name       String
  isoCode    String       @unique @map("iso_code") @db.VarChar(3)
  continent  String
  latitude   Float
  longitude  Float
  createdAt  DateTime     @default(now()) @map("created_at")
  updatedAt  DateTime     @updatedAt @map("updated_at")
  deletedAt  DateTime?    @map("deleted_at")
  locations  Location[]
  statistics Statistics[]

  @@index([continent])
  @@index([isoCode])
  @@map("country")
}

/// Ponto geográfico específico (cidade, região) usado como origem/destino
/// de rotas migratórias e como referência de eventos históricos.
model Location {
  id                  String                   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  countryId           String                   @map("country_id") @db.Uuid
  name                String
  type                LocationType             @default(CITY)
  latitude            Float
  longitude           Float
  /// Coluna PostGIS. Tipo Unsupported: o Prisma Client não a expõe
  /// diretamente — consultas espaciais usam $queryRaw (ver docs/postgis.md).
  geometry            Unsupported("geometry")?
  createdAt           DateTime                 @default(now()) @map("created_at")
  updatedAt           DateTime                 @updatedAt @map("updated_at")
  deletedAt           DateTime?                @map("deleted_at")
  country             Country                  @relation(fields: [countryId], references: [id])
  events              MigrationEvent[]
  routesAsDestination MigrationRoute[]         @relation("RouteDestination")
  routesAsOrigin      MigrationRoute[]         @relation("RouteOrigin")

  @@index([countryId])
  @@index([type])
  @@index([geometry], map: "location_geometry_gist_idx", type: Gist)
  @@map("location")
}

/// Caminho migratório entre duas Locations (ex: Teerã → Istambul).
/// Não armazena volume/período — isso é responsabilidade de MigrationFlow,
/// permitindo que a mesma rota acumule fluxos de anos e tipos diferentes.
model MigrationRoute {
  id                    String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  originLocationId      String          @map("origin_location_id") @db.Uuid
  destinationLocationId String          @map("destination_location_id") @db.Uuid
  name                  String
  description           String?
  status                String          @default("active")
  createdAt             DateTime        @default(now()) @map("created_at")
  updatedAt             DateTime        @updatedAt @map("updated_at")
  deletedAt             DateTime?       @map("deleted_at")
  flows                 MigrationFlow[]
  destination           Location        @relation("RouteDestination", fields: [destinationLocationId], references: [id])
  origin                Location        @relation("RouteOrigin", fields: [originLocationId], references: [id])

  @@index([originLocationId])
  @@index([destinationLocationId])
  @@index([status])
  @@map("migration_route")
}

/// Registro quantitativo de pessoas em movimento em uma rota, em um
/// período (ano/mês/dia opcional). É o dado transacional/histórico
/// principal do sistema — nunca é soft-deletado (histórico imutável).
model MigrationFlow {
  id              String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  routeId         String         @map("route_id") @db.Uuid
  year            Int
  month           Int
  day             Int?
  amount          Int
  flowType        FlowType       @map("flow_type")
  /// Nível de confiança da estimativa (0.0 a 1.0). Ver docs/model.md
  /// para a justificativa de usar um score contínuo em vez de um enum.
  confidenceLevel Float          @default(1.0) @map("confidence_level")
  sourceId        String         @map("source_id") @db.Uuid
  createdAt       DateTime       @default(now()) @map("created_at")
  route           MigrationRoute @relation(fields: [routeId], references: [id])
  source          DataSource     @relation(fields: [sourceId], references: [id])

  @@index([routeId])
  @@index([year, month])
  @@index([flowType])
  @@index([sourceId])
  @@map("migration_flow")
}

/// Evento histórico (crise, mudança política, conflito) que ajuda a
/// contextualizar variações nos fluxos migratórios em determinado período.
model MigrationEvent {
  id          String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  title       String
  description String?
  date        DateTime
  locationId  String?   @map("location_id") @db.Uuid
  createdAt   DateTime  @default(now()) @map("created_at")
  location    Location? @relation(fields: [locationId], references: [id])

  @@index([locationId])
  @@index([date])
  @@map("migration_event")
}

/// Proveniência de um dado (UNHCR, IDMC, IOM, dados simulados, etc).
/// Nunca referenciada diretamente por consumidores externos — apenas
/// via MigrationFlow.sourceId, mantendo a integração desacoplada de
/// qualquer API externa específica (ver docs/integration-review.md).
model DataSource {
  id          String          @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name        String          @unique
  url         String?
  description String?
  type        SourceType      @default(MOCK)
  createdAt   DateTime        @default(now()) @map("created_at")
  flows       MigrationFlow[]

  @@map("data_source")
}

/// Dado agregado pré-calculado (ex: saldo migratório de um país em um
/// período), usado para acelerar consultas de dashboard sem recalcular
/// agregações pesadas a cada requisição.
model Statistics {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  metric    String
  value     Float
  period    String
  countryId String?  @map("country_id") @db.Uuid
  createdAt DateTime @default(now()) @map("created_at")
  country   Country? @relation(fields: [countryId], references: [id])

  @@index([countryId])
  @@index([period])
  @@index([metric])
  @@map("statistics")
}

/// Estrutura reservada para autenticação/autorização futura (Etapa 4+).
/// Nenhuma lógica de autenticação é implementada nesta etapa.
model User {
  id        String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name      String
  email     String    @unique
  role      String    @default("viewer")
  createdAt DateTime  @default(now()) @map("created_at")
  updatedAt DateTime  @updatedAt @map("updated_at")
  deletedAt DateTime? @map("deleted_at")

  @@map("app_user")
}

/// This table contains check constraints and requires additional setup for migrations. Visit https://pris.ly/d/check-constraints for more info.
model spatial_ref_sys {
  srid      Int     @id
  auth_name String? @db.VarChar(256)
  auth_srid Int?
  srtext    String? @db.VarChar(2048)
  proj4text String? @db.VarChar(2048)
}

/// Tipo de movimento representado por um registro de MigrationFlow.
enum FlowType {
  EXIT
  RETURN
  TRANSIT
}

/// Granularidade geográfica de uma Location.
enum LocationType {
  CITY
  COUNTRY
  REGION
}

/// Origem/proveniência de um DataSource.
enum SourceType {
  API
  MANUAL
  MOCK
}
